--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -1,80 +1,47 @@
-name: Rust CD
+name: Build All Targets
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main ]
   pull_request:
-    branches: [ "main" ]
-
-env:
-  CARGO_TERM_COLOR: always
+    branches: [ main ]
 
 jobs:
-  release:
-    name: Release - ${{ matrix.platform.os_name }}
-    if: startsWith( github.ref, 'refs/tags/v' ) || github.ref == 'refs/tags/test-release'
+  build:
     strategy:
       matrix:
-        platform:
-          - os_name: Linux-x86_64
-            os: ubuntu-latest
+        include:
+          - os: ubuntu-latest
             target: x86_64-unknown-linux-gnu
-            bin: code2prompt
-            name: code2prompt-Linux-x86_64.tar.gz
-            cross: false
-            cargo_command: cargo
-
-          - os_name: Windows-x86_64
-            os: windows-latest
-            target: x86_64-pc-windows-msvc
-            bin: code2prompt.exe
-            name: code2prompt-Windows-x86_64.zip
-            cross: false
-            cargo_command: cargo
-
-          - os_name: macOS-x86_64
-            os: macOS-latest
+          - os: ubuntu-latest
+            target: aarch64-unknown-linux-gnu
+          - os: macos-latest
             target: x86_64-apple-darwin
-            bin: code2prompt
-            name: code2prompt-Darwin-x86_64.tar.gz
-            cross: false
-            cargo_command: cargo
-    
-    runs-on: ${{ matrix.platform.os }}
+          - os: macos-latest
+            target: aarch64-apple-darwin
+          - os: windows-latest
+            target: x86_64-pc-windows-gnu
+    runs-on: ${{ matrix.os }}
     steps:
-      - name: Checkout
+      - name: Checkout code
         uses: actions/checkout@v4
-      - name: Install toolchain if not cross-compiling
-        uses: dtolnay/rust-toolchain@stable
+
+      - name: Set up Rust toolchain
+        uses: actions-rs/toolchain@v1
         with:
-          targets: ${{ matrix.platform.target }}
-        if: ${{ matrix.platform.cross }}
-      - name: Build binary (*nix)
-        shell: bash
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
+
+      # Optionally install any extra dependencies needed for cross-compiling
+      - name: Install extra dependencies on Ubuntu
+        if: runner.os == 'Linux'
         run: |
-          ${{ matrix.platform.cargo_command }} build --locked --release --target ${{ matrix.platform.target }}          
-        if: ${{ !contains(matrix.platform.os, 'windows') }}
-      - name: Build binary (Windows)
-        # We have to use the platform's native shell. If we use bash on
-        # Windows then OpenSSL complains that the Perl it finds doesn't use
-        # the platform's native paths and refuses to build.
-        shell: powershell
-        run: |
-          & ${{ matrix.platform.cargo_command }} build --locked --release --target ${{ matrix.platform.target }}          
-        if: contains(matrix.platform.os, 'windows')
-      - name: Strip binary
-        shell: bash
-        run: |
-          strip target/${{ matrix.platform.target }}/release/${{ matrix.platform.bin }}          
-        # strip doesn't work with cross-arch binaries on Linux or Windows.
-        if: ${{ !(matrix.platform.cross || matrix.platform.target == 'x86_64-pc-windows-msvc') }}
-      - name: Package as archive
-        shell: bash
-        run: |
-          cd target/${{ matrix.platform.target }}/release
-          if [[ "${{ matrix.platform.os }}" == "windows-latest" ]]; then
-            7z a ../../../${{ matrix.platform.name }} ${{ matrix.platform.bin }}
-          else
-            tar czvf ../../../${{ matrix.platform.name }} ${{ matrix.platform.bin }}
+          if [ "${{ matrix.target }}" = "aarch64-unknown-linux-gnu" ]; then
+            sudo apt-get update && sudo apt-get install -y gcc-aarch64-linux-gnu;
           fi
-          cd -
+
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
+
+      # Optionally, you can add steps to run tests or package artifacts
