--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -43,22 +43,33 @@ jobs:
       - name: Build
         run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Package Binary
+      # Packaging pour Windows (PowerShell)
+      - name: Package Binary (Windows)
+        if: runner.os == 'Windows'
         id: package
+        shell: pwsh
+        run: |
+          $BIN_DIR = "target/${{ matrix.target }}/release"
+          $BIN_NAME = "code2prompt"
+          New-Item -ItemType Directory -Force -Path release | Out-Null
+          Copy-Item "$BIN_DIR\$BIN_NAME.exe" "release/${BIN_NAME}-${{ matrix.target }}.exe"
+          # Pour Windows, nous livrons directement l'exécutable (attention au séparateur /)
+          Set-Content -Path asset.txt -Value "release/${BIN_NAME}-${{ matrix.target }}.exe"
+          $ASSET_PATH = Get-Content asset.txt
+          Write-Output "Asset path: $ASSET_PATH"
+          echo "::set-output name=asset-path::$ASSET_PATH"
+
+      # Packaging pour Linux/macOS (bash)
+      - name: Package Binary (Unix)
+        if: runner.os != 'Windows'
+        id: package
+        shell: bash
         run: |
           BIN_DIR=target/${{ matrix.target }}/release
           BIN_NAME=code2prompt
           mkdir -p release
-          if [ "${{ matrix.os }}" == "windows-latest" ]; then
-            cp "$BIN_DIR/$BIN_NAME.exe" "release/${BIN_NAME}-${{ matrix.target }}.exe"
-            zip -j "release/${BIN_NAME}-${{ matrix.target }}.zip" "release/${BIN_NAME}-${{ matrix.target }}.exe"
-            echo "release/${BIN_NAME}-${{ matrix.target }}.zip" >> asset.txt
-          else
-            cp "$BIN_DIR/$BIN_NAME" "release/${BIN_NAME}-${{ matrix.target }}"
-            tar -czf "release/${BIN_NAME}-${{ matrix.target }}.tar.gz" -C release "$(basename release/${BIN_NAME}-${{ matrix.target }})"
-            echo "release/${BIN_NAME}-${{ matrix.target }}.tar.gz" >> asset.txt
-          fi
-          # Output the asset path for later jobs (assuming a single asset per job)
+          cp "$BIN_DIR/$BIN_NAME" "release/${BIN_NAME}-${{ matrix.target }}"
+          echo "release/${BIN_NAME}-${{ matrix.target }}" > asset.txt
           ASSET_PATH=$(cat asset.txt)
           echo "Asset path: $ASSET_PATH"
           echo "::set-output name=asset-path::$ASSET_PATH"
@@ -78,20 +89,22 @@ jobs:
         with:
           path: artifacts
 
-      - name: Create GitHub Release
-        id: create_release
-        uses: softprops/action-gh-release@v1
+      - name: List artifacts for release
+        id: list_artifacts
+        run: |
+          # Liste chaque fichier trouvé sous artifacts, en utilisant le séparateur newline
+          files=$(find artifacts -type f | sort | paste -sd '\n' -)
+          echo "Files to upload:"
+          echo "$files"
+          echo "::set-output name=files::$files"
+
+      - name: Create GitHub Release and upload assets
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref }}
           name: Release ${{ github.ref }}
           body: "Automatically generated release for ${{ github.ref }}"
+          files: ${{ steps.list_artifacts.outputs.files }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Upload Release Assets
-        uses: actions/upload-release-asset@v1
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifacts
-          asset_name: ${{ github.ref }}-assets.zip
-          asset_content_type: application/zip
