--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
             target: x86_64-pc-windows-gnu
     runs-on: ${{ matrix.os }}
     outputs:
-      asset-path: ${{ steps.package.outputs.asset-path }}
+      asset-path: ${{ steps.set_asset.outputs.asset-path }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -46,57 +46,55 @@ jobs:
       # Packaging pour Windows (PowerShell)
       - name: Package Binary (Windows)
         if: runner.os == 'Windows'
-        id: package
+        id: package_windows
         shell: pwsh
         run: |
           $BIN_DIR = "target/${{ matrix.target }}/release"
           $BIN_NAME = "code2prompt"
           New-Item -ItemType Directory -Force -Path release | Out-Null
           Copy-Item "$BIN_DIR\$BIN_NAME.exe" "release/${BIN_NAME}-${{ matrix.target }}.exe"
-          # Pour Windows, nous livrons directement l'exécutable (attention au séparateur /)
-          Set-Content -Path asset.txt -Value "release/${BIN_NAME}-${{ matrix.target }}.exe"
-          $ASSET_PATH = Get-Content asset.txt
-          Write-Output "Asset path: $ASSET_PATH"
-          echo "::set-output name=asset-path::$ASSET_PATH"
+          # Enregistrer le chemin de l'artefact dans un fichier
+          Set-Content -Path asset_windows.txt -Value "release/${BIN_NAME}-${{ matrix.target }}.exe"
 
       # Packaging pour Linux/macOS (bash)
       - name: Package Binary (Unix)
         if: runner.os != 'Windows'
-        id: package
+        id: package_unix
         shell: bash
         run: |
           BIN_DIR=target/${{ matrix.target }}/release
           BIN_NAME=code2prompt
           mkdir -p release
           cp "$BIN_DIR/$BIN_NAME" "release/${BIN_NAME}-${{ matrix.target }}"
-          echo "release/${BIN_NAME}-${{ matrix.target }}" > asset.txt
-          ASSET_PATH=$(cat asset.txt)
+          echo "release/${BIN_NAME}-${{ matrix.target }}" > asset_unix.txt
+
+      # Récupérer le chemin de l'artefact (selon l'OS) et le définir comme output
+      - name: Set asset output
+        id: set_asset
+        shell: bash
+        run: |
+          if [ -f asset_windows.txt ]; then
+            ASSET_PATH=$(cat asset_windows.txt)
+          else
+            ASSET_PATH=$(cat asset_unix.txt)
+          fi
           echo "Asset path: $ASSET_PATH"
           echo "::set-output name=asset-path::$ASSET_PATH"
-      
+
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: asset-${{ matrix.target }}
-          path: ${{ steps.package.outputs.asset-path }}
+          path: ${{ steps.set_asset.outputs.asset-path }}
 
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
-      - name: Download all artifacts
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           path: artifacts
-
-      - name: List artifacts for release
-        id: list_artifacts
-        run: |
-          # Liste chaque fichier trouvé sous artifacts, en utilisant le séparateur newline
-          files=$(find artifacts -type f | sort | paste -sd '\n' -)
-          echo "Files to upload:"
-          echo "$files"
-          echo "::set-output name=files::$files"
 
       - name: Create GitHub Release and upload assets
         if: startsWith(github.ref, 'refs/tags/')
@@ -105,6 +103,8 @@ jobs:
           tag_name: ${{ github.ref }}
           name: Release ${{ github.ref }}
           body: "Automatically generated release for ${{ github.ref }}"
-          files: ${{ steps.list_artifacts.outputs.files }}
+          # On utilise ici un pattern qui recherche les fichiers dans le dossier artifacts
+          files: |
+            artifacts/**
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
